fixed layout bug in posts / pages modal & sidebar

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -595,7 +595,7 @@ em {
   height: 26px; }
 
 #sidebar-ui .sidebar-commands-control .command-redo {
-  margin-left: 8px; }
+  margin-left: 4px; }
 
 #sidebar-ui .sidebar-commands-control .command-save {
   background: #1fcd8f;
@@ -669,7 +669,7 @@ em {
   width: 26px;
   height: 26px;
   padding: 2px;
-  margin: 1px 12px 8px 20px; }
+  margin: 0 0 8px 15px; }
 
 #sidebar-ui .sidebar-commands-control .command-trash {
   float: left;
@@ -7946,7 +7946,7 @@ i.upfront-field-icon-burger-trigger {
 .upfront-list_item-component.upfront-editactions a.editaction {
   display: inline-block;
   border-radius: 3px;
-  padding: 0 8px; }
+  padding: 0 5px; }
 
 a.editaction.edit, a.editaction.view {
   background-color: #3C5267;
