--- a/styles/sass/partials/_sidebar-ui.scss
+++ b/styles/sass/partials/_sidebar-ui.scss
@@ -382,7 +382,7 @@
 	height: 26px;
 }
 #sidebar-ui .sidebar-commands-control .command-redo {
-	margin-left: 8px;
+	margin-left: 4px;
 }
 #sidebar-ui .sidebar-commands-control .command-save {
 	background: #1fcd8f;
@@ -456,7 +456,7 @@
 	width: 26px;
 	height: 26px;
 	padding: 2px;
-	margin: 1px 12px 8px 20px;
+	margin: 0 0 8px 15px;
 }
 #sidebar-ui .sidebar-commands-control .command-trash {
 	float: left;
